# rust-playground

./: Cargo.toml  README.md  nx.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/myapp/: Cargo.toml  project.json
apps/myapp/src/: main.rs
apps/react-monorepo/: project.json  vite.config.ts
apps/react-monorepo-e2e/: cypress.config.ts  project.json
apps/react-monorepo/src/app/: nx-welcome.tsx
libs/cats/: Cargo.toml  project.json
libs/cats/src/: lib.rs
libs/task_runner/: Cargo.toml  project.json
libs/task_runner/src/: lib.rs  task.rs  utils.rs
libs/task_runner/src/executors/: docker_executor.rs  executor_trait.rs  local_executor.rs  mod.rs  noop_executor.rs
libs/task_runner/src/local/: docker_executor.rs  local_executor.rs  mod.rs  task.rs
